WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120390
Fix the indentation of SpaceSplitString
https://bugs.webkit.org/show_bug.cgi?id=120390
Summary
Fix the indentation of SpaceSplitString
Benjamin Poulain
Reported
2013-08-27 20:01:16 PDT
Fix the indentation of SpaceSplitString
Attachments
Patch
(7.14 KB, patch)
2013-08-27 20:01 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2013-08-27 20:01:47 PDT
Created
attachment 209838
[details]
Patch
Benjamin Poulain
Comment 2
2013-08-27 20:09:28 PDT
Comment on
attachment 209838
[details]
Patch Clearing flags on attachment: 209838 Committed
r154719
: <
http://trac.webkit.org/changeset/154719
>
Benjamin Poulain
Comment 3
2013-08-27 20:09:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug