Fix the indentation of SpaceSplitString https://bugs.webkit.org/show_bug.cgi?id=120390

Reviewed by Ryosuke Niwa.

* dom/SpaceSplitString.h:
(WebCore::SpaceSplitStringData::contains):
(WebCore::SpaceSplitStringData::isUnique):
(WebCore::SpaceSplitStringData::size):
(WebCore::SpaceSplitStringData::operator[]):
(WebCore::SpaceSplitString::SpaceSplitString):
(WebCore::SpaceSplitString::operator!=):
(WebCore::SpaceSplitString::clear):
(WebCore::SpaceSplitString::contains):
(WebCore::SpaceSplitString::containsAll):
(WebCore::SpaceSplitString::size):
(WebCore::SpaceSplitString::isNull):
(WebCore::SpaceSplitString::operator[]):
(WebCore::SpaceSplitString::spaceSplitStringContainsValue):
(WebCore::SpaceSplitString::ensureUnique):


Canonical link: https://commits.webkit.org/138359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154719 268f45cc-cd09-0410-ab3c-d52691b4dbfc